modified:   pkg/aspi/.Rbuildignore 	modified:   pkg/aspi/.Rhistory 	modified:   pkg/aspi/.Rproj.user/470211A3/pcs/files-pane.pper 	modified:   pkg/aspi/.Rproj.user/470211A3/pcs/source-pane.pper 	modified:   pkg/aspi/.Rproj.user/470211A3/pcs/windowlayoutstate.pper 	modified:   pkg/aspi/.Rproj.user/470211A3/pcs/workbench-pane.pper 	modified:   pkg/aspi/.Rproj.user/470211A3/persistent-state 	modified:   pkg/aspi/.Rproj.user/470211A3/sdb/prop/INDEX 	deleted:    pkg/aspi/.Rproj.user/470211A3/sdb/s-908DE062/1F8EA4A3 	deleted:    pkg/aspi/.Rproj.user/470211A3/sdb/s-908DE062/4BDAD478 	deleted:    pkg/aspi/.Rproj.user/470211A3/sdb/s-908DE062/79DD618D 	deleted:    pkg/aspi/.Rproj.user/470211A3/sdb/s-908DE062/AE70C441 	deleted:    pkg/aspi/.Rproj.user/470211A3/sdb/s-908DE062/BDA778BC 	deleted:    pkg/aspi/.Rproj.user/470211A3/sdb/s-908DE062/CDCBA8F0 	deleted:    pkg/aspi/.Rproj.user/470211A3/sdb/s-908DE062/D5448826 	deleted:    pkg/aspi/.Rproj.user/470211A3/sdb/s-908DE062/DB94301A 	deleted:    pkg/aspi/.Rproj.user/470211A3/sdb/s-908DE062/lock_file 	modified:   pkg/aspi/DESCRIPTION 	modified:   pkg/aspi/NAMESPACE 	modified:   pkg/aspi/R/functions.R 	modified:   pkg/aspi/man/eb.test.Rd 	modified:   pkg/aspi/man/g.test.Rd 	modified:   pkg/aspi/man/plotHistogram.Rd 	modified:   pkg/aspi/man/plotVolcano.Rd 	renamed:    pkg/aspi/vignettes/.build.timestamp -> vignettes/.build.timestamp 	renamed:    pkg/aspi/vignettes/aspi.Rmd -> vignettes/aspi.Rmd 	renamed:    pkg/aspi/vignettes/aspi.bib -> vignettes/aspi.bib

--- a/vignettes/aspi.Rmd
+++ b/vignettes/aspi.Rmd
@@ -33,7 +33,7 @@ G-tests involve logarithmic transformation and so cannot be applied to counts of
 Data for analysis should be in a matrix of data.frame with two numeric columns. Each row represents one host. The first column is the number of parasites recorded from the left-side of the host and the 2nd column is the number of parasites recorded from the right-side. Identifiers for hosts can be provided as row names.
 
 ```r
-library(aspi)
+devtools::load_all()
 simulated_symmetrical_infection
 ```
 
