--- a/pkg/aspi/vignettes/aspi.bib
+++ b/pkg/aspi/vignettes/aspi.bib
@@ -10,6 +10,7 @@
 
 @article{BH1995,
   author = {Y. Benjamini and Y. Hochberg},
+  year = {1995},
   title = {Controlling the false discovery rate: a practical and powerful approach to multiple testing},
   journal = {Journal of the Royal Statistical Society B},
   volume = {57},
@@ -18,6 +19,7 @@
 
 @article{Holm1979,
   author = {S. Holm},
+  year = {1979},
   title = {A simple sequentially rejective multiple test procedure},
   journal = {Scandinavian Journal of Statistics},
   volume = {6},
